--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "laravel/database",
-    "description": "Get Laravel 4.2.x database for your non laravel projects. Built on top of illuminate/database to provide migration, seeding and artisan support",
+    "description": "Get Laravel 5.2.x database for your non laravel projects. Built on top of illuminate/database to provide migration, seeding and artisan support",
     "keywords": ["laravel", "database", "sql", "orm"],
     "minimum-stability": "dev",
     "license": "MIT",
@@ -12,16 +12,18 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/database": "4.2.*",
-        "illuminate/cache": "4.2.*",
-        "illuminate/filesystem": "4.2.*",
+        "php": ">=5.5.9",
+        "illuminate/database": "5.2.*",
+        "illuminate/events": "5.2.*",
+        "illuminate/cache": "5.2.*",
+        "illuminate/filesystem": "5.2.*",
         "luracast/config": "1.*",
         "vlucas/phpdotenv": "~1.0"
     },
     "require-dev": {
-        "illuminate/console": "4.2.*",
-        "d11wtq/boris": "~1.0"
+        "illuminate/console": "5.2.*",
+        "psy/psysh": "0.7.*",
+        "symfony/process": "3.0.*"
     },
     "suggest": {
         "doctrine/dbal": "Allow renaming columns and dropping SQLite columns."
