--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
         "illuminate/events": "5.2.*",
         "illuminate/cache": "5.2.*",
         "illuminate/filesystem": "5.2.*",
-        "luracast/config": "1.*",
-        "vlucas/phpdotenv": "~1.0"
+        "luracast/config": "2.*",
+        "vlucas/phpdotenv": "~1.0",
+        "league/flysystem": "~1.0"
     },
     "require-dev": {
         "illuminate/console": "5.2.*",
