--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "illuminate/filesystem": "5.2.*",
         "luracast/config": "2.*",
         "vlucas/phpdotenv": "~1.0",
-        "league/flysystem": "~1.0"
+        "league/flysystem": "~1.0",
+        "illuminate/pagination": "5.2.*"
     },
     "require-dev": {
         "illuminate/console": "5.2.*",
