--- a/composer.json
+++ b/composer.json
@@ -1,51 +1,63 @@
 {
-    "name": "laravel/database",
-    "description": "Get Laravel 5.8.x database for your non laravel projects. Built on top of illuminate/database to provide migration, seeding and artisan support",
-    "keywords": ["laravel", "database", "sql", "orm"],
-    "minimum-stability": "dev",
-    "license": "MIT",
-    "type": "project",
-    "authors": [
-        {
-            "name": "Arul Kumaran",
-            "email": "arul@luracast.com"
-        }
-    ],
-    "require": {
-        "php": "^7.1.3",
-        "illuminate/database": "5.8.*",
-        "illuminate/events": "5.8.*",
-        "illuminate/cache": "5.8.*",
-        "illuminate/filesystem": "5.8.*",
-        "luracast/config": "2.*",
-        "vlucas/phpdotenv": "~1.0",
-        "league/flysystem": "~1.0",
-        "illuminate/pagination": "5.8.*"
-    },
-    "require-dev": {
-        "illuminate/console": "5.8.*",
-        "psy/psysh": "0.9.*",
-        "symfony/process": "^4.2",
-        "barryvdh/laravel-ide-helper": "^2.6@dev",
-        "illuminate/queue": "^5.8",
-        "illuminate/view": "^5.8",
-        "doctrine/dbal": "~2.3"
-    },
-    "suggest": {
-        "doctrine/dbal": "Allow renaming columns and dropping SQLite columns."
-    },
-    "autoload": {
-        "classmap": [
-            "app/commands",
-            "app/models",
-            "app/database/migrations",
-            "app/database/seeds"
-        ],
-        "psr-0": {
-            "": "app/controllers"
-        },
-        "psr-4": {
-            "Bootstrap\\": "bootstrap/"
-        }
+  "name": "laravel/database",
+  "description": "Get Laravel database for your non laravel projects. Built on top of illuminate/database to provide migration, seeding and artisan support",
+  "keywords": [
+    "laravel",
+    "database",
+    "sql",
+    "orm"
+  ],
+  "license": "MIT",
+  "type": "project",
+  "authors": [
+    {
+      "name": "Arul Kumaran",
+      "email": "arul@luracast.com"
     }
+  ],
+  "require": {
+    "php": "^7.2.5|^8",
+    "illuminate/cache": "^8",
+    "illuminate/database": "^8",
+    "illuminate/events": "^8",
+    "illuminate/filesystem": "^8",
+    "illuminate/pagination": "^8",
+    "league/flysystem": "^1.0",
+    "luracast/config": "2.*",
+    "psy/psysh": "^0.10.4",
+    "symfony/process": "^5",
+    "vlucas/phpdotenv": "^5"
+  },
+  "require-dev": {
+    "doctrine/dbal": "~2.10",
+    "illuminate/console": "^8",
+    "illuminate/queue": "^8",
+    "illuminate/view": "^8",
+    "laravel/helpers": "^1"
+  },
+  "suggest": {
+    "doctrine/dbal": "Allow renaming columns and dropping SQLite columns."
+  },
+  "autoload": {
+    "psr-4": {
+      "Bootstrap\\": "bootstrap/",
+      "App\\": "app/"
+    },
+    "classmap": [
+      "database/seeds",
+      "database/factories"
+    ]
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "config": {
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "optimize-autoloader": true
+  },
+  "scripts": {
+    "post-root-package-install": [
+      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ]
+  }
 }
